# cpp-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: example.hpp  logger.hpp  logic.hpp  models_data.hpp
include/models/: course.hpp  grade.hpp  student.hpp
src/: example.cpp  main.cpp
src/data/: models_data.cpp
src/logic/: logic.cpp
src/models/: course.cpp  grade.cpp  student.cpp
src/visual/: logger.cpp
test/: test_course.cpp  test_example.cpp  test_grade.cpp  test_student.cpp
